--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <com.mindorks.placeholderview.PlaceHolderView
-        android:id="@+id/phv_gallery"
+        android:id="@+id/galleryView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
